Updated to JRE 10 because of javafx 9 calls (can't use JRE 8). Resolved a deprecated funztion warning in Database.java class